# xgboost-predictor-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp  xgboost_model.txt
xgboost_predictor/: CMakeLists.txt  XgboostPredictor.cpp  XgboostPredictor.h
